--- a/index.html
+++ b/index.html
@@ -1,12 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Honda CBR</title>
+    <!-- Link with Style Sheet -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/7dbac22b8b.js" crossorigin="anonymous"></script>
+    <!-- Title -->
+    <title>HONDA SHOP</title>
+    <!-- Add icon on Title -->
+    <link rel="icon" href="images/bike-4.jpg" type="image/icon type">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Poppins - font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;700;800;900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-	
+    <!-- Navigation Start -->
+    <!-- <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a href="#" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item"><a href="#courses" class="nav-link">Shop</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">News</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav> -->
+    <!-- Navigation End -->
+	<!-- Header Section Start -->
+    <header class="top-banner">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-md-6 mt-5 p-3 header-text">
+                    <p class="header-name honda-details">Computer-controlled digital transistorized with electronic advance</p>
+                    <h1 class="h1 fw-bold text-white">Honda CBR 300R</h1>
+                    <p style="line-height: 36px;" class="header-name honda-details mb-4">Bangladesh Honda Private Limited operates in a single industry<br>segment in Bangladesh under a joint venture between Honda Motor<br>Company Ltd, Japan and Bangladesh Steel under Ministry of Industry.</p>
+                    
+                    <!-- Modal and Button Start -->
+                    <!-- Button trigger modal -->
+                    <button type="button" class="customize-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Purchase
+                    </button>
+                    
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Need Discount !!</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">Get extra 10% Discount in your first order.</div>
+                            <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Add to Cart</button>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mt-5 mt-md-0">
+                    <img src="images/header-bike.png" alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </header>
+	<!-- Header Section Finish  -->
+	<main>
+	<!-- Featured Bikes Section Starts   -->
+	<section class="container">
+        <div class="text-center my-5">
+            <h1 class="fw-bold">Featured Bikes 2021</h1>
+            <p class="orange">Best bike collection</p>
+        </div>
+        <div class="row gx-5 mx-5 mt-5 pt-5">
+            <div class="col-lg-4 mb-5">
+                <img class="gray-scale" src="images/featured bike.png" alt="">
+            </div>
+            <div class="col-lg-4 mb-5">
+                <img class="" src="images/featured bike.png" alt="">
+            </div>
+            <div class="col-lg-4 mb-5">
+                <img class="gray-scale" src="images/featured bike.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Features Bikes Section Ends -->
+
+    <!-- Client Section Start  -->
+    <section class="container mt-5 mb-5">
+        <div class="text-center my-5">
+            <h1>Happy <span class="orange">Clients says</span></h1>
+        </div>
+        <div class="row row-cols-1 row-cols-md-3 g-4 mb-5">
+            <!-- First client  -->
+            <div class="col">
+                <div class="card h-100">
+                    <img class="w-50 mx-auto my-4" src="images/user-1.png" class=""
+                        alt=" ">
+                    <div class="card-body">
+
+                        <p class="card-text text-center mx-4">Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                        <div class="d-flex justify-content-center">
+                            <i class="fas fa-star  fa-star-style"></i>
+                            <i class="fas fa-star  fa-star-style"></i>
+                            <i class="fas fa-star  fa-star-style"></i>
+                            <i class="fas fa-star  fa-star-style"></i>
+                            <i class="far fa-star  fa-star-style"></i>
+                        </div>
+                        <div>
+                            <h6 class="text-center my-3 text-primary">Regina Miles</h6>
+                            <h6 class="text-center my-3">Banker</h6>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <!-- Second client  -->
+            <div class="col">
+                <div class="card h-100">
+                    <img class="w-50 mx-auto my-4" src="images/user-2.png" class=""
+                        alt=" ">
+                    <div class="card-body">
+
+                        <p class="card-text text-center mx-4">Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <i class="fas fa-star  fa-star-style"></i>
+                        <i class="fas fa-star  fa-star-style"></i>
+                        <i class="fas fa-star  fa-star-style"></i>
+                        <i class="fas fa-star  fa-star-style"></i>
+                        <i class="far fa-star  fa-star-style"></i>
+                    </div>
+                    <div>
+                        <h6 class="text-center my-3 text-primary">Regina Miles</h6>
+                        <h6 class="text-center my-3">Banker</h6>
+                    </div>
+                </div>
+            </div>
+            <!-- Third client  -->
+            <div class="col">
+                <div class="card h-100">
+                    <img class="w-50 h-50 mx-auto my-4 border border-dark rounded-circle" src="images/user-3.jpg"
+                        class="" alt=" ">
+                    <div class="card-body">
+                        <p class="card-text text-center mx-4">Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <i class="fas fa-star  fa-star-style"></i>
+                        <i class="fas fa-star  fa-star-style"></i>
+                        <i class="fas fa-star  fa-star-style"></i>
+                        <i class="fas fa-star  fa-star-style"></i>
+                        <i class="far fa-star  fa-star-style"></i>
+                    </div>
+                    <div>
+                        <h6 class="text-center my-3 text-primary">Regina Miles</h6>
+                        <h6 class="text-center my-3">Banker</h6>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+    <!-- Client Section Ends  -->
+
+	<!-- Javascript CDN Added -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	</main>
+    <footer >
+
+	</footer>
 </body>
+
 </html>
