--- a/index.html
+++ b/index.html
@@ -296,11 +296,11 @@
                   <div class="d-flex align-items-center row our-info-bg p-5 bg-gradient rounded">
                       <div class="col-lg-7 text-white">
                             <h1>Honda <span class="orange">CBR1000R-R</span></h1>
-                            <p>The CBR1000RR, marketed in some countries as the
+                            <p>The CBR1000RR, marketed in some countries as the<br>
                                 "Fireblade" is a
                                 999 cc
                                 liquid-cooled inline
-                                four-cylinder superbike.</p>
+                                <br>four-cylinder superbike.</p>
                         <h1>$4000</h1>
                         <button class="custom-btn">Add to Cart
                         </button>
@@ -316,7 +316,7 @@
                     <div class="col-lg-7 text-white">
                           <h1>Honda <span class="orange"> CBR250R-R</span></h1>
                           <p>The Honda CBR250RR is a CBR series 250cc
-                            twin-cylinder sport bike made by Astra Honda Motor, a subsidiary of Honda in
+                            twin-cylinder <br>sport bike made by Astra <br>Honda Motor, a subsidiary of Honda in
                             Indonesia.</p>
                       <h1>$4500</h1>
                       <button class="custom-btn">Add to Cart
@@ -331,8 +331,8 @@
                     <div class="d-flex align-items-center row our-info-bg p-5 bg-gradient rounded">
                         <div class="col-lg-7 text-white">
                             <h1>Honda<span class="orange"> CBR 650F</span></h1>
-                            <p>The Honda 650 cc standard and sport motorcycles are a
-                                range of 649 cc. The line includes the CB650F standard or 'naked bike'.</p>
+                            <p>The Honda 650 cc standard and sport motorcycles<br> are a
+                                range of 649 cc. The line includes the CB650F<br> standard or 'naked bike'.</p>
                         <h1>$5200</h1>
                         <button class="custom-btn">Add to Cart
                         </button>
@@ -355,6 +355,63 @@
     </section>
         <!-- Trending Product Section Ends  -->
 
+        <!-- Contact Us Section Start  -->
+        <section class="contact-us py-5" id="contact">
+            <div class="container">
+                <h2 class="text-center font-large after-element fs-1 pb-4"><span class="orange">Contact</span> Us</h2>
+                <form class="row w-75 mx-auto text-light contact-bg g-3 px-md-5 pt-2 pb-4">
+                    <div class="col-md-6">
+                      <label for="inputEmail4" class="form-label">Email</label>
+                      <input type="email" placeholder="Email Address" class="form-control" id="inputEmail4">
+                    </div>
+                    <div class="col-md-6">
+                      <label for="inputPassword4" class="form-label">Password</label>
+                      <input type="password" placeholder="Password" class="form-control" id="inputPassword4">
+                    </div>
+                    <div class="col-12">
+                      <label for="inputAddress" class="form-label">Permanent Address</label>
+                      <input type="text" class="form-control" id="inputAddress" placeholder="10, Mirpur, Dhaka">
+                    </div>
+                    <div class="col-12">
+                      <label for="inputAddress2" class="form-label">Temporary Address</label>
+                      <input type="text" class="form-control" id="inputAddress2" placeholder="Kandirpar , Cumilla">
+                    </div>
+                    <div class="col-md-6">
+                      <label for="inputCity" class="form-label">City</label>
+                      <input type="text" placeholder="Dhaka" class="form-control" id="inputCity">
+                    </div>
+                    <div class="col-md-4">
+                      <label for="inputState" class="form-label">State</label>
+                      <select id="inputState" class="form-select">
+                        <option selected>Dhaka</option>
+                        <option>Dhaka</option>
+                        <option>Sylhet</option>
+                        <option>Chittagong</option>
+                        <option>Barisal</option>
+                        <option>Rajsahi</option>
+                        <option>Rangpur</option>
+                      </select>
+                    </div>
+                    <div class="col-md-2">
+                      <label for="inputZip" class="form-label">Zip</label>
+                      <input type="text" placeholder="1234" class="form-control" id="inputZip">
+                    </div>
+                    <div class="col-12">
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                        <label class="form-check-label" for="gridCheck">
+                          Confirm
+                        </label>
+                      </div>
+                    </div>
+                    <div class="col-12">
+                      <button type="submit" class="custom-btn">Submit</button>
+                    </div>
+                  </form>
+            </div>
+        </section>
+
+        <!-- Contact Us Section Ends  -->
 
 
         <!-- Bonus Section Ends  -->
