--- a/index.html
+++ b/index.html
@@ -277,9 +277,11 @@
                                         <h1>Honda <span class="orange">CBR1000R-R</span></h1>
                                         <p>The CBR1000RR, marketed in some countries as the<br>"Fireblade" is a 999 cc liquid-cooled inline<br>four-cylinder superbike.</p><br>
                                         <h1>$4000</h1><br>
-                                        <button class="custom-btn">
-                                            Add to Cart
-                                        </button>
+                                        <a href="https://web.programming-hero.com/dashboard"target="_blank">
+                                            <button class="custom-btn">
+                                                Add to Cart
+                                            </button>
+                                        </a> 
                                 </div>
                                 <div class="col-lg-5">
                                     <img src="images/bike-1.png" class="d-block w-100" alt="...">
@@ -292,9 +294,11 @@
                                         <h1>Honda <span class="orange"> CBR250R-R</span></h1>
                                         <p>The Honda CBR250RR is a CBR series 250cc twin-cylinder <br>sport bike made by Astra <br>Honda Motor, a subsidiary of Honda in Indonesia.</p><br>
                                         <h1>$4500</h1><br>
-                                        <button class="custom-btn">
-                                            Add to Cart
-                                        </button>
+                                        <a href="https://web.programming-hero.com/dashboard"target="_blank">
+                                            <button class="custom-btn">
+                                                Add to Cart
+                                            </button>"
+                                        </a> 
                                     </div>
                                     <div class="col-lg-5">
                                         <img src="images/bike-2.png" class="d-block w-100" alt="...">
@@ -307,9 +311,11 @@
                                         <h1>Honda<span class="orange"> CBR 650F</span></h1>
                                         <p>The Honda 650 cc standard and sport motorcycles<br> are a range of 649 cc. The line includes the CB650F<br> standard or 'naked bike'.</p><br>
                                         <h1>$5200</h1><br>
-                                        <button class="custom-btn">
-                                            Add to Cart
-                                        </button>
+                                        <a href="https://web.programming-hero.com/dashboard"target="_blank">
+                                            <button class="custom-btn">
+                                                Add to Cart
+                                            </button>
+                                        </a>                             
                                     </div>
                                     <div class="col-lg-5">
                                         <img src="images/bike-3.png" class="d-block w-100" alt="...">
@@ -318,12 +324,12 @@
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
                     </button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
                     </button>
                 </div>
             </section>
