--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             <section class="mt-5">
                 <div class="container">
-                    <h1 class="text-center font-large fw-bold">Happy <span class="orange">Clients Says</span></h1>
+                    <h1 class="client text-center font-large fw-bold">Happy <span class="orange">Clients Says</span></h1>
                     <div class="d-flex flex-column flex-md-row gap-4 mt-5 justify-content-center align-items-center">
                         <!-- First client Start-->
                         <div class="card text-center px-2 pt-4" style="width: 18rem;">
@@ -128,7 +128,7 @@
                         <div class="card text-center px-2 pt-4" style="width: 18rem;">
                             <img class="mx-auto" src="images/user-2.png" width="150px">
                             <div class="card-body mt-2">
-                                <p class="card-text">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                                <p class="card-text">The product is so cheaper rather than other company in the area because Honda gives me some discount.</p>
                                 <div>
                                     <i class="fa-star-style fas fa-star"></i>
                                     <i class="fa-star-style fas fa-star"></i>
@@ -147,7 +147,7 @@
                         <div class="card text-center px-2 pt-4" style="width: 18rem;">
                             <img class="mx-auto" src="images/user-3.png" width="150px">
                             <div class="card-body mt-2">
-                                <p class="card-text">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                                <p class="card-text">I just got my perfect scutty for my Long way to Bank.Their service is just awesome and product is also best.</p>
                                 <div>
                                     <i class="fa-star-style fas fa-star"></i>
                                     <i class="fa-star-style fas fa-star"></i>
@@ -169,7 +169,7 @@
 
             <!-- Frequently Asked Questions Section Start  -->
 
-            <section class="my-5 py-5">
+            <section class="my-5 ">
                     <div class="container">
                         <h1 class="text-center font-large fw-bold mb-4">Frequently Asked <span class="orange">Questions</span></h1>
                         <div class="row my-5 py-5">
@@ -336,9 +336,9 @@
             <!-- Trending Product Section Ends  -->
 
             <!-- Contact Us Section Start  -->
-            <section class="contact-us  py-5" id="contact">
+            <section class="contact-us my-5 py-5" id="contact">
                     <div class="container">
-                        <h2 class="text-center fw-bold font-large after-element fs-1 pb-4"><span class="orange font-large">Contact</span> <span class="font-large"> Us</span></h2>
+                        <h2 class="text-center fw-bold font-large after-element fs-1 mb-5 pb-4"><span class="orange font-large">Contact</span> <span class="font-large"> Us</span></h2>
                         <form class="row rounded-3 w-75 mx-auto text-light contact-bg g-3 px-md-5 pt-2 pb-4">
                             <div class="col-md-6">
                             <label for="inputEmail4" class="form-label">E-mail</label>
@@ -370,11 +370,8 @@
                                 <option>Barisal</option>
                                 <option>Rajsahi</option>
                                 <option>Rangpur</option>
+                                <option>Dinajpur</option>
                             </select>
-                            </div>
-                            <div class="col-md-2">
-                            <label for="inputZip" class="form-label">Zip</label>
-                            <input type="text" placeholder="1234" class="form-control" id="inputZip">
                             </div>
                             <div class="col-12">
                             <div class="form-check">
