--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <div class="card text-center px-2 pt-4" style="width: 18rem;">
                             <img class="mx-auto" src="images/user-3.png" width="150px">
                             <div class="card-body mt-2">
-                                <p class="card-text">I just got my perfect scutty for my Long way to Bank.Their service is just awesome and product is also best.</p>
+                                <p class="card-text">I just got my perfect scutty for my Long way to Bank.Their service is just awesome and product is also good.</p>
                                 <div>
                                     <i class="fa-star-style fas fa-star"></i>
                                     <i class="fa-star-style fas fa-star"></i>
@@ -169,7 +169,7 @@
 
             <!-- Frequently Asked Questions Section Start  -->
 
-            <section class="my-5 ">
+            <section class="my-5 "> 
                     <div class="container">
                         <h1 class="text-center font-large fw-bold mb-4">Frequently Asked <span class="orange">Questions</span></h1>
                         <div class="row my-5 py-5">
@@ -189,9 +189,7 @@
                                         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
                                             aria-labelledby="panelsStayOpen-headingOne">
                                             <div class="accordion-body">
-                                                Safety First! Always obey the rules of the road. Obey all traffic signals, signs,
-                                                and laws. Get in the mindset of “driving” your bike—not just “riding” your bike.
-                                                This will help you be a more focused and legally compliant bike rider.
+                                                Safety First! Always obey the rules of the road. Obey all traffic signals, signs,and laws. Get in the mindset of “driving” your bike—not just “riding” your bike.This will help you be a more focused and legally compliant bike rider.
                                             </div>
                                         </div>
                                     </div>
@@ -200,18 +198,13 @@
                                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                                 data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                                                 aria-controls="panelsStayOpen-collapseTwo">
-                                                <h4>How can I tell if my helmet is old and I need a new one?</h4>
+                                                <h4>Do electric bikes recharge when applying brakes or going down hill – like a hybrid car’s regenerative braking?</h4>
                                             </button>
                                         </h2>
                                         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                                             aria-labelledby="panelsStayOpen-headingTwo">
                                             <div class="accordion-body">
-                                                <strong>This is the second item's accordion body.</strong> It is hidden by default,
-                                                until the collapse plugin adds the appropriate classes that we use to style each
-                                                element. These classes control the overall appearance, as well as the showing and
-                                                hiding via CSS transitions. You can modify any of this with custom CSS or overriding
-                                                our default variables. It's also worth noting that just about any HTML can go within
-                                                the <code>.accordion-body</code>, though the transition does limit overflow.
+                                                It’s rare and the concept doesn’t work very well. A few models of electric bikes include a feature to recharge the battery, usually while you are braking. In those cases the range of the battery can be extended 5-10%, while adding several hundred dollars to the cost. However, due to the design of the motors that provide regeneration, you'll often find that the bike is harder to pedal if you are using the bike with the power off.
                                             </div>
                                         </div>
                                     </div>
@@ -220,18 +213,13 @@
                                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                                 data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
                                                 aria-controls="panelsStayOpen-collapseThree">
-                                                <h4>My bike has been in storage is it safe to ride?</h4>
+                                                <h4>How do I know if I have a good fit?</h4>
                                             </button>
                                         </h2>
                                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                                             aria-labelledby="panelsStayOpen-headingThree">
                                             <div class="accordion-body">
-                                                <strong>This is the third item's accordion body.</strong> It is hidden by default,
-                                                until the collapse plugin adds the appropriate classes that we use to style each
-                                                element. These classes control the overall appearance, as well as the showing and
-                                                hiding via CSS transitions. You can modify any of this with custom CSS or overriding
-                                                our default variables. It's also worth noting that just about any HTML can go within
-                                                the <code>.accordion-body</code>, though the transition does limit overflow.
+                                                Basically</strong> you know you have a good fit when you're comfortable on the bike. Many bike shops have elaborate fitting machines and computer programs to access your fit. These systems certainly have their place. However, a few rules of thumb and an experienced eye will go a long way in getting a proper fit. That's where we come in.
                                             </div>
                                         </div>
                                     </div>
@@ -241,18 +229,12 @@
                                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                                 data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
                                                 aria-controls="panelsStayOpen-collapseThree">
-                                                <h4>What rules should I follow when riding my bike?</h4>
+                                                <h4>Should I buy a bike with a mid-drive motor or hub-motor?</h4>
                                             </button>
                                         </h2>
                                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                                             aria-labelledby="panelsStayOpen-headingThree">
-                                            <div class="accordion-body">
-                                                <strong>This is the third item's accordion body.</strong> It is hidden by default,
-                                                until the collapse plugin adds the appropriate classes that we use to style each
-                                                element. These classes control the overall appearance, as well as the showing and
-                                                hiding via CSS transitions. You can modify any of this with custom CSS or overriding
-                                                our default variables. It's also worth noting that just about any HTML can go within
-                                                the <code>.accordion-body</code>, though the transition does limit overflow.
+                                            <div class="accordion-body">They both have their benefits. Hub motors tend to be a little easier to operate if you are a less experienced cyclist,because they require less shifting of gears. Mid-drives tend to get a little better range for equivalent battery capacity, because you'll get more efficiency by shifting. While theoretically you get better hill climbing with a mid-drive, you'll usually find both types will climb just about any hill.Finally, it's usually easier to change a rear tire with a mid-drive.But the real test of determining which type of motor is best for you is to ride both and compare.
                                             </div>
                                         </div>
                                     </div>
@@ -260,8 +242,8 @@
                             </div>
                         </div>
                     </div> 
-            </section>
-
+            </section> 
+            
             <!-- Frequently Asked Questions Section  Ends  -->
 
             <!-- Bonus Part Start  -->
