--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <!-- Bonus Part Start  -->
 
             <!-- Trending Product Section -->
-            <h1 class="text-center fw-bold  font-large mt-5"><span class="orange">Trending </span>Honda's</h1>
+            <h1 class="text-center fw-bold  font-large mt-5"><span class="orange">Best Seller </span>Honda's</h1>
             <section class="container">
                 <div id="carouselExampleControls" class="rounded-3 carousel slide mt-5 trending-bg" data-bs-ride="carousel">
                     <div class="carousel-inner">
