--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        Get extra 10% Discount in your first order.
+                                        Get extra 10% Discount in your First order.
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
